# cargo-single-pyo3

./: Cargo.toml  README.md
src/: main.rs
