[package]
name = "cargo-single-pyo3"
version = "0.1.3"
authors = ["Will Crichton <wcrichto@cs.stanford.edu>"]
description = "Generate a Python module from a single Rust file."
edition = "2021"
homepage = "https://github.com/willcrichton/cargo-single-pyo3"
repository = "https://github.com/willcrichton/cargo-single-pyo3"
license = "MIT"

[dependencies]
clap = {version = "2", default-features = false}
anyhow = "1"
toml = "0.5"
serde = {version = "1", features = ["derive"]}